...
    '保研',
    '考研',
    '推免',
    '实习',
    '实践',
    '社会实践',
    '综合测评',
    '综测',
    '学分',
    '补考',
    '重修',
    '毕业',
    '学位',
...
